[project]
name = "bookbot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "attikoszto",email = "131347235+attikoszto@users.noreply.github.com"},
]
dependencies = [
    "go>=1.2.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
